fix: add @media for skeleton tablet & mobile

--- a/src/components/Skeleton/Skeleton.module.css
+++ b/src/components/Skeleton/Skeleton.module.css
@@ -22,7 +22,7 @@
   width: 80%;
   height: 30px;
   background-image: linear-gradient(90deg, #ddd 0px, #e8e8e8 40px, #ddd 80px, #e8e8e8 120px);
-  animation:  shimmer 1.5s infinite;
+  animation: shimmer 1.5s infinite;
 }
 
 .info {
@@ -35,6 +35,26 @@
     width: 60px;
     height: 20px;
     background-image: linear-gradient(90deg, #ddd 0px, #e8e8e8 40px, #ddd 80px, #e8e8e8 120px);
-    animation:  shimmer 1.5s infinite;
+    animation: shimmer 1.5s infinite;
   }
+}
+
+@media screen and (max-width: 845px) {
+  .wrapper {
+    flex-basis: calc(50% - 1rem);
+
+  }
+}
+
+
+@media screen and (max-width: 580px) {
+  .wrapper {
+    flex-basis: calc(100% - 1rem);
+
+    &:nth-child(1),
+    &:nth-child(2) {
+      flex-basis: calc(100% - 1rem);
+    }
+  }
+
 }
